syntax = "proto3";

package userPackage;


message ServerStreamUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string signInType = 4;
    string providerId = 5;
    repeated string groups = 6;
    string userRole = 7;
    string password = 8;
    int32 version = 9;
}

message ClientUsersRequest {
    string serviceName = 1;
}

service UserService {
    rpc GetAllUsers(ClientUsersRequest) returns (stream ServerStreamUserResponse) {};
}
